@@ -1,0 +1,3 @@
+setFieldsFromDEM.C
+
+EXE = $(FOAM_USER_APPBIN)/setFieldsFromDEM
